--- a/style/main.css
+++ b/style/main.css
@@ -313,17 +313,24 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    color:rgba(0,0,0,0);
+    background: url('../tile-sets/presidents/2.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
+    color:rgba(0,0,0,0);
     background: #ede0c8;
+    background: url('../tile-sets/presidents/4.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
+    color:rgba(0,0,0,0);
+    background: #f2b179; 
+    background: url('../tile-sets/presidents/8.jpg');}
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
-    background: #f59563; }
+    color:rgba(0,0,0,0);
+    background: #f59563;  
+    background: url('../tile-sets/presidents/16.jpg');}
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: #f67c5f; }
